# MapleEngine

./: README.md
src/: CMakeLists.txt  Main.cpp  Precompiled.hpp  compile_commands.json  componentData.hpp  engineManager.cpp  entityManager.cpp  inputHandling.cpp  renderer.cpp  renderer.h  vector.hpp  windowLayer.cpp  windowLayer.hpp
src/.cache/clangd/index/: Main.cpp.FD24A6E4FD3F912E.idx  Precompiled.hpp.7C7EF1C053106FCE.idx  Precompiled.hpp.DFF32EF5BEA1DB9C.idx  componentData.hpp.5891C91542478BFE.idx  componentData.hpp.C5F0BA3069FF8F03.idx  engine.cpp.D7DAB8C78D6D8C05.idx  engineManager.cpp.CF1CE67468BCAEAE.idx  entityClassData.hpp.80A6541FE2897D60.idx  inputHandling.cpp.C64D9AFEF2CC5DB6.idx  main.cpp.38D12F46D0553389.idx  main.cpp.E38E4C0EFCC6E93C.idx  mainData.hpp.13B42FF3FB4878FE.idx  mapData.cpp.7D3F98A9D8E0E67C.idx  precompiled.hpp.6CE974A226C16B62.idx  renderer.cpp.5F10F0E10CBCF244.idx  renderer.cpp.9C13F65E289E75B9.idx  renderer.hpp.1987CB0696A1E005.idx  vector.hpp.2D89F8C745072472.idx  vector.hpp.A83FB259E17C0F79.idx
src/.shader/: fragmentShader.glsl  vertexShader.glsl
src/core/: Main.cpp  Main.hpp  Precompiled.hpp  compile_commands.json  vertexShader.glsl  windowLayer.cpp  windowLayer.hpp
src/~/.vim/undodir/: C%%Users%jal4dsox%AppData%Local%nvim%after%plugin%lsp_config.lua  C%%Users%jal4dsox%AppData%Local%nvim%after%plugin%todo-comments.lua  C%%Users%jal4dsox%AppData%Local%nvim%after%plugin%treesitter.lua  C%%Users%jal4dsox%AppData%Local%nvim%lua%thesleepster%init.lua  C%%Users%jal4dsox%AppData%Local%nvim%lua%thesleepster%lazy.lua  C%%Users%jal4dsox%C++Stuff%Maple%src%  C%%Users%jal4dsox%C++Stuff%Maple%src%CMakeLists.txt  C%%Users%jal4dsox%C++Stuff%Maple%src%Main.cpp  C%%Users%jal4dsox%C++Stuff%Maple%src%Precompiled.h  C%%Users%jal4dsox%C++Stuff%Maple%src%Precompiled.hpp  C%%Users%jal4dsox%C++Stuff%Maple%src%componentData.hpp  C%%Users%jal4dsox%C++Stuff%Maple%src%engineManager.cpp  C%%Users%jal4dsox%C++Stuff%Maple%src%entityManager.cpp  C%%Users%jal4dsox%C++Stuff%Maple%src%handleTexturing.cpp  C%%Users%jal4dsox%C++Stuff%Maple%src%renderer.cpp  C%%Users%jal4dsox%C++Stuff%Maple%src%renderer.h  C%%Users%jal4dsox%C++Stuff%Maple%src%renderer.hpp  C%%Users%jal4dsox%C++Stuff%Maple%src%test.cpp  C%%Users%jal4dsox%C++Stuff%Maple%src%vector.hpp  C%%Users%jal4dsox%C++Stuff%Maple%src%windowLayer.cpp  C%%Users%jal4dsox%C++Stuff%Maple%src%windowLayer.hpp  C%%Users%jal4dsox%C++Stuff%test%src%CMakeLists.txt  C%%Users%jal4dsox%C++Stuff%test%src%Precompiled.hpp  C%%Users%jal4dsox%C++Stuff%test%src%componentData.hpp  C%%Users%jal4dsox%C++Stuff%test%src%engine.cpp  C%%Users%jal4dsox%C++Stuff%test%src%engineData.cpp  C%%Users%jal4dsox%C++Stuff%test%src%engineManager.cpp  C%%Users%jal4dsox%C++Stuff%test%src%entityClassData.hpp  C%%Users%jal4dsox%C++Stuff%test%src%entityData.cpp  C%%Users%jal4dsox%C++Stuff%test%src%handleWindowandRenderingData.cpp  C%%Users%jal4dsox%C++Stuff%test%src%main.cpp  (+7 more)
(+19 files in other folders)
